updates poker hand guide

--- a/index.html
+++ b/index.html
@@ -2176,7 +2176,7 @@
                                     </div>
                                 </div>
                                 <div class="faq-poker-hands-container">
-                                    <img class="faq-poker-hands-infographic" src="img/poker-hands-help.jpg"
+                                    <img class="faq-poker-hands-infographic" src="img/poker-hands-help.png"
                                         alt="Poker hands infographic">
                                 </div>
                                 <div class="faq-question-container">
